global-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: rentalservice
    version: "1.0"
  name: rentalservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rentalservice
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rentalservice
    spec:
      containers:
        - name: rentalservice
          image: "rentalservice"
          imagePullPolicy: Never # to avoid pulling the image from the registry and take the local image built
          ports:
            - containerPort: 8080
          resources: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rentalservice
  name: rentalservice
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: rentalservice
  type: NodePort
status:
  loadBalancer: {}
