rental-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rental-service
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: rental-deployment-label
  type: NodePort
